--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.henry.medicinebarber",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -43,6 +44,14 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "EXPO_PUBLIC_SUPABASE_URL": "https://eldezufspaabepzoaesq.supabase.co",
+      "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_9plGzU-isLEdr7Zi1uxxGg_KbvB_sg8",
+      "router": {},
+      "eas": {
+        "projectId": "ce9b4d45-e941-4f54-be63-4dc5126795d0"
+      }
     }
   }
 }
